# Portfolio

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: launch.json
Tools/: OpenCV_imageDownScaler.py
backend/: .dockerignore  Cargo.toml  README.md  ResourceJSON_stripper.py  dev.sh  mongoDBaccess.js  package-lock.json  package.json  resources.json  searchServer.js  server.js
backend/src/: .env.development  file_test.rs  knowledge.rs  main.rs  mongoDB.rs  mongoDBaccess.js  searchServer.js  server.js
dev/: docker-compose.dev.yml  meili-init.sh
dev/mongo-init/: init.js
mediaServer/: .env.development  Cargo.toml  README.md  dev.sh
mediaServer/src/: file_test.rs  knowledge.rs  main.rs  mongoDB.rs
production/: Dockerfile  Production Setup Instructions.txt  containerizeServer.py  deploy_backend.sh  deploy_media_server.sh  portfolio  production_files_move.py  server_info_change.py  themiddleplace
production/docker servers/backend/: Dockerfile
production/docker servers/media_server/: Dockerfile
web_app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
web_app/src/: API_Keys.jsx  FilmGrain.jsx  GrainCanvas.jsx  GrainOverlay.jsx  app.css  app.jsx  error-page.jsx  grain.css  homepage.jsx  main.css  main.jsx  mainTW.css  navigationBar.css  navigationBar.jsx  serverInfo.jsx  svgGrain.jsx  theme.jsx  threejsgrain.jsx  upload.jsx  useAuth.jsx
web_app/src/HDRPHOTOS/: HDRTEST2020_1.avif  HDRTEST2020_2.avif  HDRTEST2020_3.avif  HDRTEST2020_4.avif  HDRTEST2020_5.avif  HDRTESTP3_2.avif
web_app/src/assets/: marbledbutton.tsx
web_app/src/routes/: adminRoute.jsx  backgroundAnimation.css  backgroundAnimation.jsx  category.css  category.jsx  commandK.jsx  deleteModal.jsx  editModal.jsx  editTutorial.css  editTutorial.jsx  error-page.jsx  home.css  home.jsx  homepage.css  homepage.jsx  kineticHeadline.jsx  logosMarquee.jsx  marbleField.jsx  navigationBar.css  upload.css  (+9 more)
(+28 files in other folders)
