[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["full"] }
tower = "0.5.2"
http-body-util = "0.1.3"
mongodb = "3.3.0"
dotenvy = "0.15.7"
serde_json = "1.0.145"
rand = "0.10.0-rc.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
jsonwebtoken = "10.4.0"
sha2 = "0.11.0"
hex = "0.4.3"
meilisearch-sdk = "0.33.0"
symphonia = { version = "0.5.4", features = ["mp3", "aac", "aiff"] }
