[package]
name = "mediaServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"]}
serde = { version = "1.0.218", features = ["derive"] }
tokio = {version = "1.43.0", features =["full"]}
tokio-util = { version = "0.7.13", features = ["io"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["full"] }
tower = "0.5.2"
http-body-util = "0.1.2"
mongodb = "3.2.2"
dotenvy = "0.15.7"
serde_json = "1.0.140"
rand = "0.9.0"
